Bug 343092 - copy pasting from empty selection or layer should be disabled and floating message may be shown notifying the same
Summary: copy pasting from empty selection or layer should be disabled and floating me...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-20 16:55 UTC by Raghavendra kamath
Modified: 2015-01-28 11:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2015-01-20 16:55:30 UTC
Copy pasting from an empty layer or selection creates new empty layer this adds to confusion and clutter if there are many layers.

user should be notified that the layer is empty or selected area is empty.



Reproducible: Always

Steps to Reproduce:
1.open krita and new document
2.create an empty layer
3.make a selection and copy paste

Actual Results:  
new empty layer is created even if there is nothing copied and pasted

Expected Results:  
no layer should be created and user should be notified
Comment 1 Dmitry Kazakov 2015-01-28 11:16:26 UTC
Git commit d6bcbb073327ebf5f3f8269e54f0dcc18f8a6ed9 by Dmitry Kazakov.
Committed on 28/01/2015 at 11:16.
Pushed by dkazakov into branch 'calligra/2.9'.

Notify the user if copying empty selection

M  +7    -0    krita/ui/actions/kis_selection_action_factories.cpp

http://commits.kde.org/calligra/d6bcbb073327ebf5f3f8269e54f0dcc18f8a6ed9