Notify the user if copying empty selection

BUG:343092